--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "multer": "^1.4.4-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
